RESOLVED FIXED205764
REGRESSION (r248734): different threads write m_storageMap of StorageAreaImpl at the same time
https://bugs.webkit.org/show_bug.cgi?id=205764
Summary REGRESSION (r248734): different threads write m_storageMap of StorageAreaImpl...
Sihui Liu
Reported 2020-01-03 22:19:43 PST
Attachments
Patch (2.06 KB, patch)
2020-01-03 22:27 PST, Sihui Liu
no flags
Sihui Liu
Comment 1 2020-01-03 22:27:15 PST
Maciej Stachowiak
Comment 2 2020-01-06 18:49:44 PST
Comment on attachment 386755 [details] Patch r=me Is it possible to make a test case for this that fails even without ASAN?
Sihui Liu
Comment 3 2020-01-07 15:03:05 PST
(In reply to Maciej Stachowiak from comment #2) > Comment on attachment 386755 [details] > Patch > > r=me > > Is it possible to make a test case for this that fails even without ASAN? It could be hard to write a dedicated test due to the race condition, and it looks like usually we only change session of WebView between tests (reseting preferences between tests in DumpRenderTree), not in one test.
WebKit Commit Bot
Comment 4 2020-01-07 16:17:41 PST
Comment on attachment 386755 [details] Patch Clearing flags on attachment: 386755 Committed r254169: <https://trac.webkit.org/changeset/254169>
WebKit Commit Bot
Comment 5 2020-01-07 16:17:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.